--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+h1{
+    font-weight: bold;
+}
+.main{
+    max-width: 600px;
+margin: 10px;
+padding: 15px;
+border-left: 8px solid green;
+background-color: #f8fffe;
+
+}
