--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
-
-/* Your CSS Code here. */
-h1{
-    font-weight: bold;
-}
-.main{
+body{
     max-width: 600px;
-margin: 10px;
-padding: 15px;
-border-left: 8px solid green;
-background-color: #f8fffe;
-
+}
+label{
+    font-weight:bold;
+}
+blockquote{
+	margin: 10px;
+	padding: 15px;
+	border-left: 8px solid green;
+	background-color: #f8fffe;
+	font-weight: bold;
 }
